--- a/PostGIS_Python/Example_Connection.ipynb
+++ b/PostGIS_Python/Example_Connection.ipynb
@@ -28,15 +28,15 @@
     "    2.5. Uso de JOIN para combinar tablas<br>\n",
     "    2.6. Subconsultas<br>\n",
     "    2.7. Uso de GROUP BY y HAVING<br>\n",
-    "    2.8. Actualización y elimineación de datos<br>\n",
+    "    2.8. Actualización de datos<br>\n",
     "    2.9. Eliminar registros<br>\n",
     "    2.10. Vistas<br>\n",
     "    2.11. Llaves foráneas<br>\n",
     "    2.12. Transacciones<br>\n",
-    "3. PostgreSQL\n",
+    "3. PostgreSQL<br>\n",
     "    3.1. Instalación\n",
     "4. PostGIS<br>\n",
-    "    4.1. Instalación\n",
+    "    4.1. Instalación<br>\n",
     "    4.2. Administración PostGIS<br>\n",
     "        4.2.1. Modelo de datos espacial<br>\n",
     "        4.2.2. Tipos de datos geográficos<br>\n",
@@ -261,7 +261,7 @@
     "COMMIT;\n",
     "```\n",
     "\n",
-    "> Entre otros... (https://www.postgresql.org/docs/current/)"
+    "Entre otros... (https://www.postgresql.org/docs/current/)"
    ]
   },
   {
@@ -279,23 +279,23 @@
     "\n",
     "Seleccionar el instalador conforme al sistema operativo\n",
     "<p align=\"center\"> <img src=\"Imagenes/Instalador.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 2. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
     "\n",
     "Al ejecutar el instalador, tener en cuenta algunos puntos importantes:\n",
     "\n",
     "- Instalación de componentes (pgadmin, stack builder)\n",
     "<p align=\"center\"> <img src=\"Imagenes/Stack_Builder_Config.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 3. Configutación de Stack Builder</strong></p>\n",
     "<p align=\"center\"> <img src=\"Imagenes/Stack_Builder.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 4. Stack Builder – PostgreSQL</strong></p>\n",
     "\n",
     "- Usuario y contraseña del administrador (Para la demostración, se hace uso de postgres/postgres)\n",
     "<p align=\"center\"> <img src=\"Imagenes/User_Postgres.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 5. Definición de usuario – PostgreSQL</strong></p>\n",
     "\n",
     "- Seleccionar el puerto que se utilizará (Por defecto 5432)\n",
     "<p align=\"center\"> <img src=\"Imagenes/Port.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Instalador de Windows – PostgreSQL. https://www.postgresql.org/download/</strong></p>"
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 6. Definición de puerto – PostgreSQL</strong></p>"
    ]
   },
   {
@@ -323,11 +323,11 @@
     "##### Proceso de instalación\n",
     "Abrir Stack Builder e instalar la extensión espacial PostGIS\n",
     "<p align=\"center\"> <img src=\"Imagenes/PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 7. Instalación PostGIS</strong></p>\n",
     "\n",
     "Identificar e instalar los componentes a instalar para complementar PostGIS\n",
     "<p align=\"center\"> <img src=\"Imagenes/Components_PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>"
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 8. Componentes de PostGIS </strong></p>"
    ]
   },
   {
@@ -526,15 +526,15 @@
     "También podría hacerse por medio de la interfaz gráfica. Buscando \"PostGIS PostGIS Bundle 1 for PostgreSQL x64 16 Shapefile and DBF Loader Exporter\"\n",
     "- Realizar la conexión a la base de datos\n",
     "<p align=\"center\"> <img src=\"Imagenes/PostGIS_Connection.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 9. Conexión a PostGIS </strong></p>\n",
     "\n",
     "- Verificar las opciones de importación según las necesidades del usuario\n",
     "<p align=\"center\"> <img src=\"Imagenes/Options_Import_PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 10. Opciones de importación - PostGIS </strong></p>\n",
     "\n",
     "- Buscar y cargar el archivo Shapefile verificando el nombre con el cual se guardará la tabla y el SRID\n",
     "<p align=\"center\"> <img src=\"Imagenes/Load_Shp_PostGIS.PNG\" alt=\"unidad\" width=\"500px\"></p>\n",
-    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 1. Página oficial de PostgreSQL – PostgreSQL. https://www.postgresql.org/download/</strong></p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> <strong>Fig. 11. Cargar datos desde Shapefile </strong></p>\n",
     "\n",
     "Consultar más parámetros: https://postgis.net/docs/manual-3.5/using_postgis_dbmanagement.html#loading-data\n"
    ]
@@ -557,7 +557,7 @@
     "    <img src=\"Imagenes/Functions_PostGIS.PNG\" alt=\"unidad\" width=\"500px\">\n",
     "</p>\n",
     "<p style=\"text-align: center; font-size: 12px;\"> \n",
-    "<strong>Fig.1. Ejemplos de funciones de PostGIS – PostGIS. https://postgis.net/docs/manual-1.5/ch08.html</strong>\n",
+    "<strong>Fig. 12. Ejemplos de funciones de PostGIS – PostGIS. https://postgis.net/docs/manual-1.5/ch08.html</strong>\n",
     "</p>"
    ]
   },
@@ -591,9 +591,10 @@
     "    <img src=\"Imagenes/Formats_Raster.PNG\" alt=\"unidad\" width=\"500px\">\n",
     "</p>\n",
     "<p style=\"text-align: center; font-size: 12px;\"> \n",
-    "<strong>Fig.2. Ejemplos de formatos de ráster de PostGIS – PostGIS. https://postgis.net/docs/using_raster_dataman.html</strong>\n",
+    "<strong>Fig. 13. Ejemplos de formatos de ráster de PostGIS – PostGIS. https://postgis.net/docs/using_raster_dataman.html</strong>\n",
     "</p>\n",
-    "Para mayor información (https://postgis.net/docs/using_raster_dataman.html)."
+    "\n",
+    "Para mayor información (https://postgis.net/docs/using_raster_dataman.html)"
    ]
   },
   {
@@ -666,13 +667,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Shape_Leng</th>\n",
+       "      <th>Shape_Area</th>\n",
+       "      <th>class</th>\n",
+       "      <th>ORIG_FID</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Bosque</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POINT (333600.852 710803.978)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Bosque</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POINT (333797.268 710693.129)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Bosque</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POINT (333865.332 710844.816)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Bosque</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POINT (334120.089 710615.341)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Bosque</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POINT (334166.762 710842.872)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Shape_Leng  Shape_Area   class  ORIG_FID                       geometry\n",
+       "0         0.0         0.0  Bosque         0  POINT (333600.852 710803.978)\n",
+       "1         0.0         0.0  Bosque         0  POINT (333797.268 710693.129)\n",
+       "2         0.0         0.0  Bosque         0  POINT (333865.332 710844.816)\n",
+       "3         0.0         0.0  Bosque         0  POINT (334120.089 710615.341)\n",
+       "4         0.0         0.0  Bosque         0  POINT (334166.762 710842.872)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -690,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,20 +816,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p align=\"center\">\n",
+    "    <img src=\"Imagenes/Table_Training_Sample.PNG\" width=\"300px\">\n",
+    "</p>\n",
+    "<p style=\"text-align: center; font-size: 12px;\"> \n",
+    "<strong>Fig. 14. Tabla creada \"training_sample\" en base de datos </strong>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Insertar los datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "conn.rollback()  # Realizar un rollback por seguridad antes de insertar datos (opcional)\n",
     "insert_query = \"INSERT INTO training_sample (class, geom) VALUES (%s, ST_GeomFromText(%s, 32619))\"\n",
@@ -765,24 +853,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Cargar datos desde archivo .tif con librerías de python `rasterio`, `Shapely` y `psycopg2`"
+    "* Cargar datos desde archivo .tif con librerías de python `subprocess` y `psycopg2`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
-    "import subprocess"
+    "import psycopg2     # psycopg2: Librería para conectar Python con bases de datos PostgreSQL. Permite ejecutar consultas SQL, manipular datos y gestionar transacciones.\n",
+    "import subprocess   # subprocess: Módulo para ejecutar comandos del sistema desde Python. Se usa para llamar programas externos como psql, raster2pgsql, etc.\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n¿Por qué usar PGPASSWORD?\\n- Evita que psql solicite la contraseña cada vez que se ejecuta un comando.\\n- Facilita la automatización de tareas en PostgreSQL, como importar datos o ejecutar scripts SQL.\\n- Es más seguro que escribir la contraseña directamente en el comando, pero aún es recomendable eliminarla después de su uso.'\\n\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DB_CONFIG = {\n",
     "    \"dbname\": \"DB_GIS\",                 # Nombre de la base de datos\n",
@@ -794,51 +894,34 @@
     "conn = psycopg2.connect(**DB_CONFIG) \n",
     "cur = conn.cursor()\n",
     "# Abrir el archivo raster (.tif)\n",
-    "raster_path = r'C:\\Users\\JHERNANDEZ\\OneDrive - Esri NOSA\\Documentos\\GitHub\\PostGIS_Python\\PostGIS_Python\\temp_raster.tif'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Raster cargado exitosamente en PostGIS\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Ruta a la carpeta donde están raster2pgsql y psql\n",
-    "pg_bin_path = r\"C:\\Program Files\\PostgreSQL\\16\\bin\"\n",
-    "sql_output_path = r\"C:\\AMPC_Resources\\prueba.sql\"\n",
-    "# Construir el comando con la ruta completa de raster2pgsql y psql\n",
-    "cmd = fr'\"{pg_bin_path}\\raster2pgsql.exe\" -s 32619 -I -C \"{raster_path}\" >  {sql_output_path}'\n",
-    "# Ejecutar el comando en la terminal\n",
-    "process = subprocess.run(cmd, shell=True, capture_output=True, text=True)\n",
-    "\n",
-    "# Verificar salida o errores\n",
-    "if process.returncode == 0:\n",
-    "    print(\"Raster cargado exitosamente en PostGIS\")\n",
-    "else:\n",
-    "    print(\"Error al cargar el raster:\", process.stderr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"PGPASSWORD\"] = DB_CONFIG[\"password\"]"
+    "raster_path = r'C:\\Users\\JHERNANDEZ\\OneDrive - Esri NOSA\\Documentos\\GitHub\\PostGIS_Python\\PostGIS_Python\\temp_raster.tif'\n",
+    "os.environ[\"PGPASSWORD\"] = DB_CONFIG[\"password\"]\n",
+    "'''\n",
+    "¿Por qué usar PGPASSWORD?\n",
+    "- Evita que psql solicite la contraseña cada vez que se ejecuta un comando.\n",
+    "- Facilita la automatización de tareas en PostgreSQL, como importar datos o ejecutar scripts SQL.\n",
+    "- Es más seguro que escribir la contraseña directamente en el comando, pero aún es recomendable eliminarla después de su uso.'\n",
+    "'''\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ruta a la carpeta donde están raster2pgsql y psql\n",
+    "pg_bin_path = r\"C:\\Program Files\\PostgreSQL\\16\\bin\"\n",
+    "sql_output_path = r\"C:\\Shp_Example\\prueba.sql\"\n",
+    "# Construir el comando con la ruta completa de raster2pgsql y psql\n",
+    "cmd = fr'\"{pg_bin_path}\\raster2pgsql.exe\" -s 32619 -I -C \"{raster_path}\" >  {sql_output_path}'\n",
+    "# Ejecutar el comando en la terminal\n",
+    "process = subprocess.run(cmd, shell=True, capture_output=True, text=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
