--- a/PostGIS_Python/Example_Connection.ipynb
+++ b/PostGIS_Python/Example_Connection.ipynb
@@ -48,7 +48,8 @@
     "        4.3.3. Datos ráster<br>\n",
     "        4.3.4. Extrayendo datos espaciales ráster<br>\n",
     "5. Integración PostGIS / Python\n",
-    "6. Caso de estudio: Administración de datos para generación de modelo clasificador de Bosque / No Bosque por medio de PostGIS y Python\n"
+    "6. Caso de estudio: Administración de datos para generación de modelo clasificador de Bosque / No Bosque por medio de PostGIS y Python\n",
+    "7. Referencias y recursos\n"
    ]
   },
   {
@@ -1273,6 +1274,42 @@
     "axs[1].axis(\"off\")\n",
     "plt.tight_layout()                                                  # Ajusta el diseño de la figura para evitar solapamientos\n",
     "plt.show()                                                          # Muestra la figura con las dos imágenes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Referencias y Recursos\n",
+    "\n",
+    "##### Bases de Datos\n",
+    "- **Oracle** - [¿Qué es una base de datos?](https://www.oracle.com/co/database/what-is-database/)\n",
+    "- **PostgreSQL** - [Introducción a PostgreSQL](https://www.postgresql.org/docs/current/intro-whatis.html)\n",
+    "- **PostgreSQL - Documentación** - [PostgreSQL Docs](https://www.postgresql.org/docs/current/)\n",
+    "\n",
+    "##### SQL\n",
+    "- **SQL en AWS** - [¿Qué es SQL?](https://aws.amazon.com/es/what-is/sql/#:~:text=El%20lenguaje%20de%20consulta%20estructurada%20(SQL)%20es%20un%20lenguaje%20est%C3%A1ndar,relacional%20que%20utiliza%20consultas%20SQL.)\n",
+    "- **Acciones SQL en PostgreSQL** - [Documentación Oficial](https://www.postgresql.org/docs/current/)\n",
+    "\n",
+    "##### PostGIS\n",
+    "- **Sitio Oficial de PostGIS** - [PostGIS.net](https://postgis.net/)\n",
+    "- **Carga de datos vectoriales en PostGIS** - [Gestión de datos en PostGIS](https://postgis.net/docs/manual-3.5/using_postgis_dbmanagement.html#loading-data)\n",
+    "- **Formatos Ráster en PostGIS** - [Uso de datos ráster en PostGIS](https://postgis.net/docs/using_raster_dataman)\n",
+    "\n",
+    "##### Python y Librerías Científicas\n",
+    "1. **NumPy** - [Sitio Oficial](https://numpy.org/)\n",
+    "2. **Pandas** - [Documentación Oficial](https://pandas.pydata.org/docs/)\n",
+    "3. **GeoPandas** - [Documentación Oficial](https://geopandas.org/en/stable/)\n",
+    "4. **Scikit-Image** - [Documentación Oficial](https://scikit-image.org/docs/stable/)\n",
+    "5. **Scikit-Learn** - [Sitio Oficial](https://scikit-learn.org/stable/)\n",
+    "6. **Rasterio** - [Documentación Oficial](https://rasterio.readthedocs.io/en/latest/)\n",
+    "7. **Shapely** - [Documentación Oficial](https://shapely.readthedocs.io/en/stable/)\n",
+    "8. **Matplotlib** - [Documentación Oficial](https://matplotlib.org/stable/contents.html)\n",
+    "\n",
+    "##### Jupyter y Entornos de Desarrollo\n",
+    "- **JupyterBook** - [Documentación Oficial](https://jupyterbook.org/en/stable/content/index.html)\n",
+    "- **Jupyter Notebook** - [Guía Oficial](https://jupyter.org/documentation)\n",
+    "- **VS Code para Python** - [Extensión Oficial](https://marketplace.visualstudio.com/items?itemName=ms-python.python)"
    ]
   }
  ],
