--- a/PostGIS_Python/Example_Connection.ipynb
+++ b/PostGIS_Python/Example_Connection.ipynb
@@ -1879,7 +1879,7 @@
    "metadata": {},
    "source": [
     "<p align=\"center\">\n",
-    "    <img src=\"Imagenes/Load_Classify.PNG\" width=\"700px\">\n",
+    "    <img src=\"Imagenes/Load_Classify.png\" width=\"700px\">\n",
     "</p>\n",
     "<p style=\"text-align: center; font-size: 12px;\"> \n",
     "<strong>Fig. 15. Conexión a base de datos espacial desde QGIS para visualización de resultados </strong>\n",
